--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ body
 	float: left;
 	margin-top: 20px;
 	margin-right: 10px;
+	margin-left: -10px;
 }
 #timer
 {
@@ -45,6 +46,7 @@ body
 	font-weight: 100;
 	font-size: 70px;
 	text-align: left;
+	cursor: default;
 }
 .tile1
 {
