--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body
 {
 	background-color: #303030;
 	color: #ffffff;
-	font-family: Segoe UI;
+	font-family: Lato;
 	font-weight: 100;
 	font-size: 20px;
 }
@@ -26,7 +26,7 @@ body
 #logo
 {
 	float: left;
-	font-family: Segoe UI;
+	font-family: Lato;
 	font-weight: 100;
 	font-size: 70px;
 	width: 600px;
@@ -42,7 +42,7 @@ body
 #timer
 {
 	float: left;
-	font-family: Segoe UI;
+	font-family: Lato;
 	font-weight: 100;
 	font-size: 70px;
 	text-align: left;
